@@ -101,6 +101,12 @@ user_db = false
 # description: Queue length triggering tracks addition
 queue_length = 1
 
+## MUSICBRAINZID
+# type: boolean
+# default: True
+# description: Use of MusicBrainzIdentifier tag
+musicbrainzid = True
+
 ######################### PLUGINS #####################################
 
 [crop]
