@@ -34,6 +34,7 @@ from os.path import isfile
 # local import
 from . import core, info
 from .lib.logger import set_logger
+from .lib.meta import Meta
 from .lib.simadb import SimaDB
 from .utils.config import ConfMan
 from .utils.startopt import StartOpt
@@ -113,6 +114,11 @@ def start(sopt, restart=False):
 
     #  Loading contrib plugins
     load_plugins(sima, 'contrib')
+
+    #  Set use of MusicBrainzIdentifier
+    if not config.getboolean('sima', 'musicbrainzid'):
+        logger.info('Disabling MusicBrainzIdentifier')
+        Meta.use_mbid = False
 
     # Run as a daemon
     if config.getboolean('daemon', 'daemon'):
